--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+n<!DOCTYPE html>
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Dentistry Stand</title>
+    <title>Unity WebGL Player | Dentally Canada Stand 2024</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Dentistry Stand</div>
+        <div id="unity-build-title">Dentally Canada Stand 2024</div>
       </div>
     </div>
     <script>
@@ -64,7 +64,7 @@
         codeUrl: buildUrl + "/Canada_Stand_2024.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Dentistry Stand",
+        productName: "Dentally Canada Stand 2024",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
